<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@mipmap/bgregister">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/etTitle2"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="¡Únete a nuestra Comunidad!"
            android:textAlignment="center"
            android:textColor="#F1F3F4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etuserreg"
            android:layout_width="336dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/etuserreg"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHint="#86DEEDFF"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etpassreg"
            android:layout_width="336dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/etpassreg"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#C6C6C5"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etpassv"
            android:layout_width="336dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/etpassv"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#86DEEDFF"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnregistrarse"
            android:layout_width="265dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="196dp"
            android:backgroundTint="#86080C28"
            android:hint="@string/btnregistrarse"
            android:onClick="registro"
            android:textColorHint="#DEEDFF"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>