<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agregar">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:background="#197DBF"
        android:gravity="center"
        android:text="Añadir nuevo producto"
        android:textAlignment="center"
        android:textColor="#F8F5F5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etpproduct"
        android:layout_width="349dp"
        android:layout_height="67dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/bordelavanda"
        android:ems="10"
        android:fontFamily="@font/architects_daughter"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/etidproducto"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#F1ECEC"
        android:textColorHint="#8591F6"
        android:textColorLink="#F1ECEC"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etnombreprod"
        android:layout_width="347dp"
        android:layout_height="77dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/bordelavanda"
        android:ems="10"
        android:fontFamily="@font/architects_daughter"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/etnombreprod"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#F1ECEC"
        android:textColorHint="#8591F6"
        android:textColorLink="#F1ECEC"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etdetalleprod"
        android:layout_width="347dp"
        android:layout_height="80dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/bordelavanda"
        android:ems="10"
        android:fontFamily="@font/architects_daughter"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/etdetalleprod"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#F1ECEC"
        android:textColorHint="#8591F6"
        android:textColorLink="#F1ECEC"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etimgprod"
        android:layout_width="347dp"
        android:layout_height="82dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/bordelavanda"
        android:ems="10"
        android:fontFamily="@font/architects_daughter"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/etimgprod"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#F1ECEC"
        android:textColorHint="#8591F6"
        android:textColorLink="#F1ECEC"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnagregar"
        android:layout_width="344dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:text="Añadir"
        android:textColor="#2D6BC6" />

    <Button
        android:id="@+id/btnvolver"
        android:layout_width="347dp"
        android:layout_height="59dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:text="Volver"
        android:textColor="#2D6BC6" />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>